Game_2048/local/logs/project.log
2021-12-10T03:45:27.494Z - normal: Load ~/.CocosCreator/settings.json
2021-12-10T03:45:27.535Z - normal: Initializing Asset Database
2021-12-10T03:45:27.537Z - normal: checking language setting...
2021-12-10T03:45:27.537Z - normal: Language: en
2021-12-10T03:45:28.027Z - success: preview server running at http://localhost:7456
2021-12-10T03:45:28.041Z - success: protocol editor-framework registered
2021-12-10T03:45:28.041Z - success: protocol app registered
2021-12-10T03:45:28.042Z - success: protocol theme registered
2021-12-10T03:45:28.042Z - success: protocol packages registered
2021-12-10T03:45:28.042Z - success: protocol uuid registerred
2021-12-10T03:45:28.042Z - success: protocol db registerred
2021-12-10T03:45:28.042Z - success: protocol thumbnail registerred
2021-12-10T03:45:28.042Z - success: protocol unpack registerred
2021-12-10T03:45:28.042Z - success: protocol disable-commonjs registerred
2021-12-10T03:45:28.415Z - normal: connected!
2021-12-10T03:45:28.417Z - normal: Check project /Users/fe-baoquoc-fresher/Desktop/Quoc_Cocos_HomeWork/Game_2048
2021-12-10T03:45:28.419Z - normal: Initializing project /Users/fe-baoquoc-fresher/Desktop/Quoc_Cocos_HomeWork/Game_2048
2021-12-10T03:45:28.673Z - normal: Initializing Cocos2d
2021-12-10T03:45:29.141Z - normal: Initializing engine extends
2021-12-10T03:45:29.159Z - success: alipay-adapter loaded
2021-12-10T03:45:29.167Z - success: asset-db-debugger loaded
2021-12-10T03:45:29.173Z - success: baidu-adapter loaded
2021-12-10T03:45:29.182Z - success: color-picker loaded
2021-12-10T03:45:29.278Z - success: fb-audience-network loaded
2021-12-10T03:45:29.313Z - success: fb-live-stream loaded
2021-12-10T03:45:29.315Z - success: google-play-instant loaded
2021-12-10T03:45:29.318Z - success: huawei-runtime loaded
2021-12-10T03:45:29.484Z - success: cpk-publish loaded
2021-12-10T03:45:29.485Z - success: jsb-adapter loaded
2021-12-10T03:45:29.487Z - success: oppo-runtime loaded
2021-12-10T03:45:29.490Z - success: package-manager loaded
2021-12-10T03:45:29.562Z - success: qqplay-adapter loaded
2021-12-10T03:45:29.563Z - success: runtime-dev-tools loaded
2021-12-10T03:45:29.585Z - success: sdkbox loaded
2021-12-10T03:45:29.590Z - success: tester loaded
2021-12-10T03:45:29.592Z - success: ui-kit-preview-extra loaded
2021-12-10T03:45:29.593Z - success: ui-kit-preview loaded
2021-12-10T03:45:29.596Z - success: ui-kit loaded
2021-12-10T03:45:29.605Z - success: vivo-runtime loaded
2021-12-10T03:45:29.605Z - success: weapp-adapter loaded
2021-12-10T03:45:29.606Z - success: xiaomi-adapter loaded
2021-12-10T03:45:29.608Z - success: alipay-minigame loaded
2021-12-10T03:45:29.640Z - success: assets loaded
2021-12-10T03:45:29.643Z - success: builder loaded
2021-12-10T03:45:29.810Z - success: cocos-services loaded
2021-12-10T03:45:29.815Z - success: console loaded
2021-12-10T03:45:29.840Z - success: fb-instant-games loaded
2021-12-10T03:45:29.843Z - success: game-window loaded
2021-12-10T03:45:29.844Z - success: google-instant-games loaded
2021-12-10T03:45:29.847Z - success: hierarchy loaded
2021-12-10T03:45:29.850Z - success: inspector loaded
2021-12-10T03:45:29.851Z - success: keystore loaded
2021-12-10T03:45:29.855Z - success: node-library loaded
2021-12-10T03:45:29.856Z - success: package-asset loaded
2021-12-10T03:45:29.857Z - success: preferences loaded
2021-12-10T03:45:29.859Z - success: project-exporter loaded
2021-12-10T03:45:29.863Z - success: project-importer loaded
2021-12-10T03:45:29.865Z - success: project-settings loaded
2021-12-10T03:45:29.869Z - success: scene loaded
2021-12-10T03:45:29.870Z - success: simulator-debugger loaded
2021-12-10T03:45:29.872Z - success: sprite-editor loaded
2021-12-10T03:45:29.875Z - success: store loaded
2021-12-10T03:45:29.879Z - success: timeline loaded
2021-12-10T03:45:29.882Z - success: xiaomi-runtime loaded
2021-12-10T03:45:30.562Z - normal: Loading packages
2021-12-10T03:45:30.566Z - normal: Watching packages
2021-12-10T03:45:30.637Z - normal: Run Application
2021-12-10T03:45:32.650Z - info: Cocos Services load base data!
2021-12-10T04:44:21.653Z - failed: [db-task][sync-changes] Failed to import asset /Users/fe-baoquoc-fresher/Desktop/Quoc_Cocos_HomeWork/Game_2048/assets/Script/GameController.js, message: Compile error: SyntaxError: /Users/fe-baoquoc-fresher/Desktop/Quoc_Cocos_HomeWork/Game_2048/assets/Script/GameController.js: Unexpected token (6:23)
  4 | 
  5 |     properties: {
> 6 |         _boardPosition =[],
    |                        ^
  7 |     },
  8 | 
  9 |     // LIFE-CYCLE CALLBACKS:
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3370:10)
    at Parser.pp$3.parseExprListItem (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4312:16)
    at Parser.pp$3.parseCallExpressionArguments (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3573:20)
    at Parser.pp$3.parseSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3533:31)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
2021-12-10T04:44:30.240Z - failed: [db-task][sync-changes] Failed to import asset /Users/fe-baoquoc-fresher/Desktop/Quoc_Cocos_HomeWork/Game_2048/assets/Script/GameController.js, message: Compile error: SyntaxError: /Users/fe-baoquoc-fresher/Desktop/Quoc_Cocos_HomeWork/Game_2048/assets/Script/GameController.js: Unexpected token (6:23)
  4 | 
  5 |     properties: {
> 6 |         _boardPosition =[],
    |                        ^
  7 |     },
  8 | 
  9 |     // LIFE-CYCLE CALLBACKS:
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3370:10)
    at Parser.pp$3.parseExprListItem (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4312:16)
    at Parser.pp$3.parseCallExpressionArguments (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3573:20)
    at Parser.pp$3.parseSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3533:31)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
